--- a/artemisa-front/src/global.scss
+++ b/artemisa-front/src/global.scss
@@ -44,6 +44,7 @@ div#swal2-html-container { margin-top: 0; }
 .rainbow-b:hover{ background: linear-gradient(45deg, #fcb84a, #fc4edc, #4bc5fd);-webkit-text-fill-color: transparent;background-clip: text; -webkit-background-clip: text;  }
 .rainbow-b:active{ background: linear-gradient(45deg, #e9a231, #d633b8, #26aae7);-webkit-text-fill-color: transparent;background-clip: text; -webkit-background-clip: text;  }
 .skyler {background: linear-gradient(45deg, #c092fc, #36abff, #9058ff); border: 0; }
+.skyler-txt{background: linear-gradient(45deg, #c092fc, #36abff, #9058ff);-webkit-text-fill-color: transparent;background-clip: text; -webkit-background-clip: text; }
 .skyler:hover {background: linear-gradient(45deg, #cca5ff, #60b7f5, #ae8af5);}
 .skyler.active{-webkit-text-fill-color: #0000; background-clip: text; -webkit-background-clip: text; border: 1px solid #687cff; font-weight: 500;color:#687cff}
 .redline {background: linear-gradient(45deg,rgb(255 113 31),rgb(249 0 149)); border: 0; }
