--- a/artemisa-front/src/app/pages/dashboard/dashboard.page.html
+++ b/artemisa-front/src/app/pages/dashboard/dashboard.page.html
@@ -84,8 +84,43 @@
           </div>
         </div>
         <div class="col-md-12 col-lg-12">
+          <div class="col-md-12 pb-12">
+            <h5>Productos</h5>
+          </div>
+          <div class="row">
+            <div class="col-md-4 pb-3">
+              <div class="card htr">
+                <div class="card-body text-center">
+                  <h3>{{counterP.p}}<br />
+                    <ion-chip color="danger"> Stock Bajo </ion-chip>
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 pb-3">
+              <div class="card htr">
+                <div class="card-body text-center">
+                  <h3>{{counterP.c}}<br />
+                    <ion-chip color="warning"> Stock Medio </ion-chip>
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 pb-3">
+              <div class="card htr">
+                <div class="card-body text-center">
+                  <h3>{{counterP.t}}<br />
+                    <ion-chip color="primary"> Stock Normal </ion-chip>
+                  </h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-12">
           <div class="card mb-3">
             <div class="card-body">
+              
             </div>
           </div>
         </div>
