--- a/artemisa-front/src/global.scss
+++ b/artemisa-front/src/global.scss
@@ -26,6 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import 'bootstrap-icons/font/bootstrap-icons';
+@import '../src/app/material.scss';
 :host{
     --ion-font-family: 'Roboto';
 }
