--- a/artemisa-front/src/app/pages/add-order/add-order.page.html
+++ b/artemisa-front/src/app/pages/add-order/add-order.page.html
@@ -5,6 +5,7 @@
   </ngx-spinner>
   <div id="page-container">
     <div class="container pb-5 pt-3">
+      <div class="close-modal opacity" *ngIf="data" (click)="closeModal()"><ion-icon name="close-circle-outline"></ion-icon></div>
       <div class="row">
         <div class="col-md-12 col-lg-12">
           <h4><b>{{data ? "Modificar" : "Agregar"}} Pedido</b></h4>
