--- a/artemisa-front/src/app/pages/add-customer/add-customer.page.html
+++ b/artemisa-front/src/app/pages/add-customer/add-customer.page.html
@@ -2,6 +2,7 @@
   <ngx-spinner *ngIf="data || newUser" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-spin" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
   <div id="page-container">
     <div class="container pb-5 pt-3">
+      <div class="close-modal opacity" *ngIf="data || newUser" (click)="closeModal()"><ion-icon name="close-circle-outline"></ion-icon></div>
       <div class="row pb-3">
         <div class="col-md-12 col-lg-12 pb-3">
           <h4><b>{{data ? "Modificar" : "Agregar"}} Cliente</b></h4>
