--- a/artemisa-front/src/app/modals/forgot-password/forgot-password.page.html
+++ b/artemisa-front/src/app/modals/forgot-password/forgot-password.page.html
@@ -1,7 +1,7 @@
 <div id="custom-box">
   <div class="box-title">Recupera tu contraseña</div>
   <form [formGroup]="forgotForm" (ngSubmit)="submitForgot()">
-    <div class="close-modal opacity" *ngIf="data" (click)="dismiss()"><ion-icon name="close-circle-outline"></ion-icon></div>
+    <div class="close-modal opacity" (click)="dismiss()"><ion-icon name="close-circle-outline"></ion-icon></div>
     <div class="input-box xl fp">
       <p><b>¿Te haz olvidado tu contraseña?</b><br/>No te preocupes, podrás recuperarla ingresando tu correo. Si encontramos que tu correo es válido, te enviaremos un mensaje al mismo para que puedas recuperar tu cuenta.</p>
     </div>
