--- a/artemisa-front/src/app/modals/forgot-password/forgot-password.page.html
+++ b/artemisa-front/src/app/modals/forgot-password/forgot-password.page.html
@@ -3,7 +3,7 @@
   <form [formGroup]="forgotForm" (ngSubmit)="submitForgot()">
     <div class="close-modal opacity" (click)="dismiss()"><ion-icon name="close-circle-outline"></ion-icon></div>
     <div class="input-box xl fp">
-      <p><b>¿Te haz olvidado tu contraseña?</b><br/>No te preocupes, podrás recuperarla ingresando tu correo. Si encontramos que tu correo es válido, te enviaremos un mensaje al mismo para que puedas recuperar tu cuenta.</p>
+      <p><b>¿Te haz olvidado tu contraseña?</b><br/>No te preocupes, podrás recuperarla introduciendo tu dirección de correo electrónico. Si comprobamos que tu email es válido, te enviaremos un mensaje para que puedas recuperar tu cuenta. Si ya has rellenado este formulario y sigues sin recibir el mensaje, no olvides revisar tu carpeta de "SPAM".</p>
     </div>
     <div class="input-box xl">
       <ion-item>
